--- a/website/package.json
+++ b/website/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "dev": "webpack-dev-server",
+    "dash": "webpack-dashboard -- webpack-dev-server",
     "prod": "webpack -p"
   },
   "keywords": [],
@@ -29,6 +30,7 @@
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.6.0",
+    "webpack-dashboard": "^1.0.0",
     "webpack-dev-server": "^2.9.1"
   }
 }
