--- a/website/package.json
+++ b/website/package.json
@@ -27,6 +27,7 @@
     "purecss": "^1.0.0",
     "purecss-sass": "^1.0.0",
     "sass-loader": "^6.0.6",
+    "select2": "^4.0.6-rc.1",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.6.0",
