--- a/website/package.json
+++ b/website/package.json
@@ -1,39 +1,45 @@
 {
   "name": "bss-template",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack-dev-server --mode development --open ",
     "build": "webpack",
-    "dev": "webpack-dev-server",
-    "dash": "webpack-dashboard -- webpack-dev-server",
-    "prod": "webpack -p"
+    "prod": "webpack -p",
+    "deploy": "webpack -p && git add --all && git commit && git push",
+    "deploy-dev": "webpack && git add --all && git commit && git push"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "clean-webpack-plugin": "^0.1.17",
-    "css-loader": "^0.28.7",
-    "dygraphs": "^2.0.0",
-    "file-loader": "^1.1.5",
-    "html-loader": "^0.5.1",
-    "html-webpack-plugin": "^2.30.1",
-    "jquery": "^3.2.1",
-    "node-sass": "^4.5.3",
-    "pug": "^2.0.0-rc.4",
-    "pug-loader": "^2.3.0",
-    "purecss": "^1.0.0",
-    "purecss-sass": "^1.0.0",
-    "sass-loader": "^6.0.6",
-    "select2": "^4.0.6-rc.1",
-    "style-loader": "^0.19.0",
-    "svg-sprite-loader": "^3.5.2",
-    "uglifyjs-webpack-plugin": "^1.1.2",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.6.0",
-    "webpack-dashboard": "^1.0.0",
-    "webpack-dev-server": "^2.9.1"
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
+    "jquery": "^3.3.1",
+    "node-sass": "^4.9.3",
+    "pug": "^2.0.3",
+    "pug-loader": "^2.4.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5"
+  },
+  "dependencies": {
+    "daterangepicker": "^3.0.3",
+    "dygraphs": "^2.1.0",
+    "leaflet": "^1.3.4",
+    "svg-sprite-loader": "^3.9.2",
+    "url-loader": "^1.1.1",
+    "vue": "^2.5.17",
+    "vue-loader": "^15.4.0",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.5.17"
   }
 }
