--- a/server/uwsgi.ini
+++ b/server/uwsgi.ini
@@ -1,10 +1,10 @@
 [uwsgi]
 module = api:app
-socket = /tmp/api.sock
+socket = /home/kipfer/Sonderbuch/server/api.sock
 chmod-socket = 777
 buffer-size = 32768
-; uid = www-data
-; gid = www-data
+uid = kipfer
+gid = kipfer
 processes = 2
 ; vacuum = true
 master = true
