--- a/website/package.json
+++ b/website/package.json
@@ -15,14 +15,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "autoprefixer": "^9.1.5",
+    "babel-loader": "^8.0.0",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
     "node-sass": "^4.9.3",
+    "postcss-loader": "^3.0.0",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
     "sass-loader": "^7.1.0",
@@ -32,8 +34,10 @@
     "webpack-dev-server": "^3.1.7"
   },
   "dependencies": {
+    "@material/button": "^0.39.1",
     "daterangepicker": "^3.0.3",
     "dygraphs": "^2.1.0",
+    "extract-loader": "^3.0.0",
     "leaflet": "^1.3.4",
     "svg-sprite-loader": "^3.9.2",
     "url-loader": "^1.1.1",
