--- a/website/package.json
+++ b/website/package.json
@@ -35,6 +35,9 @@
   },
   "dependencies": {
     "@material/button": "^0.39.1",
+    "@material/form-field": "^0.39.1",
+    "@material/select": "^0.39.1",
+    "@material/textfield": "^0.39.1",
     "daterangepicker": "^3.0.3",
     "dygraphs": "^2.1.0",
     "extract-loader": "^3.0.0",
