statistics for uwsgi app; disbaled logging --> performance

--- a/server/uwsgi.ini
+++ b/server/uwsgi.ini
@@ -1,11 +1,13 @@
 [uwsgi]
+chdir = /home/kipfer/Sonderbuch/server
 module = api:app
-uwsgi-socket = api.sock
-chmod-socket = 660
+uwsgi-socket = /home/kipfer/Sonderbuch/server/api.sock
+chmod-socket = 666
 buffer-size = 32768
-processes = 2
-vacuum = true
-master = true
+processes = 3
+vacuum = True
+master = True
+disable-logging = True
+die-on-term = True
+stats = /home/kipfer/Sonderbuch/server/stats.sock
 
-die-on-term = true
-#logto = uwsgi.log
