aktueller Stand auf dem Server

--- a/server/uwsgi.ini
+++ b/server/uwsgi.ini
@@ -4,10 +4,15 @@ module = api:app
 uwsgi-socket = /home/kipfer/Sonderbuch/server/api.sock
 chmod-socket = 666
 buffer-size = 32768
-processes = 3
+socket-timeout = 20
+chunked-input-timeout = 20
+processes = 5
 vacuum = True
 master = True
+harakiri = 20
 disable-logging = True
 die-on-term = True
 stats = /home/kipfer/Sonderbuch/server/stats.sock
-
+ignore-sigpipe
+ignore-write-errors
+disable-write-exception
